--- a/index.html
+++ b/index.html
@@ -6,26 +6,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício - Lista de Compras</title>
+
+    <style>
+        body {
+            padding: 10px 0 0 30px;
+            background-color: #ccc;
+        }
+
+        .elemento {
+            margin: 15px 0;
+        }
+
+        .valor {
+            font-size: 20px;
+        }
+
+    </style>
 </head>
 
 <body>
     <h1>Lista de compras</h1>
 
-    <ul>
-        <li>
+    <ul class="lista">
+        <li class="elemento">
             Maçã - <strong>R$05,00</strong>
         </li>
 
-        <li>
+        <li class="elemento">
             Laranja - <strong>R$03,00</strong>
         </li>
 
-        <li>
+        <li class="elemento">
             Banana - <strong>R$06,00</strong>
         </li>
     </ul>
 
-    <span>
+    <span class="valor">
         Valor total - <strong>R$14,00</strong>
     </span>
 
