adicionando o arquivo style.css e aplicando estilos para a o pagina

--- a/index.html
+++ b/index.html
@@ -6,45 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício - Lista de Compras</title>
-
-    <style>
-        body {
-            padding: 10px 0 0 30px;
-            background-color: #ccc;
-        }
-
-        .elemento {
-            margin: 15px 0;
-        }
-
-        .valor {
-            font-size: 20px;
-        }
-
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Lista de compras</h1>
+    <div class="lista">
+        <h1>Lista de compras</h1>
 
-    <ul class="lista">
-        <li class="elemento">
-            Maçã - <strong>R$05,00</strong>
-        </li>
+        <ul>
+            <li class="elemento">
+                Maçã - <strong>R$05,00</strong>
+            </li>
 
-        <li class="elemento">
-            Laranja - <strong>R$03,00</strong>
-        </li>
+            <li class="elemento">
+                Laranja - <strong>R$03,00</strong>
+            </li>
 
-        <li class="elemento">
-            Banana - <strong>R$06,00</strong>
-        </li>
-    </ul>
+            <li class="elemento">
+                Banana - <strong>R$06,00</strong>
+            </li>
+        </ul>
 
-    <span class="valor">
-        Valor total - <strong>R$14,00</strong>
-    </span>
-
+        <span class="valor">
+            Valor total - <strong>R$14,00</strong>
+        </span>
+    </div>
 </body>
 
 </html>
